<resources>
    <string name="app_name" translatable="false">@string/app_name_nice</string>
    <string name="app_name_nice" translatable="false">M.A.L.P.</string>
    <string name="authors" translatable="false">Hendrik Borghorst</string>
    <string name="team" translatable="false">Team Gateship One</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="action_connect_profile">Connect profile</string>
    <string name="action_remove_profile">Remove profile</string>
    <string name="action_add_profile">Add profile</string>
    <string name="action_save_profile">Save profile</string>
    <string name="action_add">Add</string>
    <string name="action_add_album">Add album</string>
    <string name="action_play_album">Play album</string>
    <string name="action_show_all_tracks">Show all tracks</string>
    <string name="action_add_artist">Add artist</string>
    <string name="action_play_artist">Play artist</string>
    <string name="action_add_directory">Add directory</string>
    <string name="action_play_directory">Play directory</string>
    <string name="action_add_playlist">Add playlist</string>
    <string name="action_play_playlist">Play playlist</string>
    <string name="action_remove_playlist">Remove playlist</string>
    <string name="action_overwrite_playlist">Overwrite playlist</string>
    <string name="action_delete_playlist">Delete playlist</string>
    <string name="action_play_everything">Play everything</string>
    <string name="action_show_artist">Show artist</string>
    <string name="action_show_album">Show album</string>
    <string name="action_show_details">Show details</string>
    <string name="action_reset_artwork">Reset artwork</string>
    <string name="action_search">Search</string>
    <string name="action_add_search_result">Add search result</string>
    <string name="action_add_to_saved_playlist">Add to saved playlist</string>
    <string name="action_remove_from_list">Remove from playlist</string>
    <string name="action_jump_to_current">Jump to current song</string>
    <string name="action_toggle_single_mode">Single playback</string>
    <string name="action_toggle_consume_mode">Consume track</string>
    <string name="action_open_fanart">Go to fullscreen mode</string>
    <string name="action_enqueue">Add to playlist</string>
    <string name="action_enqueue_as_next">Play after current song</string>
    <string name="action_play_song">Play song</string>
    <string name="action_play_albums">Play albums</string>
    <string name="action_remove_track">Remove track</string>
    <string name="action_remove_album">Remove album</string>
    <string name="action_add_group">Add</string>
    <string name="action_add_url">Add file URL</string>
    <string name="action_add_url_playlist">Add playlist URL</string>
    <string name="action_show_albums_from_here">Show albums in this directory</string>
    <string name="action_update_database_here">Update database here</string>
    <string name="action_wikipedia" translatable="false">Wikipedia</string>
    <string name="action_wikipedia_album">Open album</string>
    <string name="action_wikipedia_artist">Open artist</string>
    <string name="action_switch_to_output">Switch to Output</string>
    <string name="action_toggle_outputs">Toggle Outputs</string>
    <string name="action_share_current_song">Share current song</string>
    <string name="menu_library">Library</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_server">Server properties</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_playlists">Playlists</string>
    <string name="menu_outputs">Outputs</string>
    <string name="menu_files">Files</string>
    <string name="menu_statistic">Statistic</string>
    <string name="menu_app_settings">App settings</string>
    <string name="menu_information">Information</string>
    <string name="menu_search">Search</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_album">Album</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_artist">Artist</string>
    <string name="artwork_settings">Artwork settings</string>
    <string name="track_item_separator" translatable="false">" - "</string>
    <string name="profiles_item_port_separator" translatable="false">":"</string>
    <string name="track_number_album_count_separator" translatable="false">" / "</string>
    <string name="track_item_loading">Track loading</string>
    <string name="main_activity_connected">Connected with MPD server</string>
    <string name="main_activity_disconnected">Disconnected from MPD server</string>
    <string name="no_album_tag">No album tag</string>
    <string name="no_artist_tag">No artist tag</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_save_playlist">Save playlist</string>
    <string name="action_start_streaming">Start streaming</string>
    <string name="action_stop_streaming">Stop streaming</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="fragment_profile_title">Edit profile</string>
    <string name="fragment_profile_profilename">Profile name:</string>
    <string name="fragment_profile_hostname">Hostname or IP:</string>
    <string name="fragment_profile_password">Password:</string>
    <string name="fragment_profile_port">Port:</string>
    <string name="fragment_profile_streaming_url">Streaming url:</string>
    <string name="fragment_profile_streaming_enabled">Enable streaming from server</string>
    <string name="fragment_profile_use_mpd_covers">Use MPD covers if available</string>
    <string name="fragment_profile_use_mpd_covers_text">Use MPD covers if available</string>
    <string name="fragment_profile_http_cover_enabled">Prefer HTTP cover files</string>
    <string name="fragment_profile_http_cover_regex">Cover path (%d replaced by the files directory)</string>
    <string name="fragment_profile_default_name">New Profile</string>
    <string name="song_track_no">Track No.:</string>
    <string name="song_playlist_no">Playlist No.:</string>
    <string name="song_bitrate">Bitrate:</string>
    <string name="song_audio_properties">Audio properties:</string>
    <string name="song_uri">Track URI:</string>
    <string name="song_title">Title:</string>
    <string name="song_album">Album:</string>
    <string name="song_artist">Artist:</string>
    <string name="song_artist_sort">Artist (sort):</string>
    <string name="song_album_artist">Album artist:</string>
    <string name="song_album_artist_sort">Album artist (sort):</string>
    <string name="song_date">Date:</string>
    <string name="song_disc">Disc:</string>
    <string name="song_duration">Duration:</string>
    <string name="song_title_mbid">MusicBrainz Track ID:</string>
    <string name="song_album_mbid">MusicBrainz Album ID:</string>
    <string name="song_artist_mbid">MusicBrainz Artist ID:</string>
    <string name="song_album_artist_mbid">MusicBrainz AlbumArtist ID:</string>
    <string name="bitrate_unit_kilo_bits">kbps</string>
    <string name="samplerate_unit_hertz" translatable="false">Hz</string>
    <string name="bitcount_unit">bits</string>
    <string name="channel_count_unit">channels</string>
    <string name="server_statistic_artists_count">Number of artists:</string>
    <string name="server_statistic_albums_count">Number of albums:</string>
    <string name="server_statistic_songs_count">Number of songs:</string>
    <string name="server_statistic_uptime">Uptime of MPD server:</string>
    <string name="server_statistic_db_playtime">Duration of whole database:</string>
    <string name="server_statistic_playtime">Recorded play time:</string>
    <string name="server_statistic_db_update">Last database update:</string>
    <string name="server_statistic_malp_server_info">Server features:</string>
    <string name="duration_days">Days</string>
    <string name="server_statistic_update_database">Update server database</string>
    <string name="server_statistic_updateing_database">Server is updating its database, please wait!</string>
    <string name="snackbar_mpd_server_error_format">Error %d/%d: %s</string>
    <string name="snackbar_mpd_connection_error_format">EtrackUrirror: %s</string>
    <string name="sharing_song_details">I\'m listening to %s by %s from album %s</string>
    <string name="dialog_save_playlist">Save Playlist</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_save">Save</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_choose_playlist">Choose playlist</string>
    <string name="dialog_message_overwrite_playlist">Do you want to overwrite the playlist:</string>
    <string name="dialog_message_delete_playlist">Do you want to delete the playlist:</string>
    <string name="dialog_message_delete_current_playlist">Do you want to delete the playlist?</string>
    <string name="dialog_message_shuffle_current_playlist">Do you want to shuffle the playlist?</string>
    <string name="dialog_share_song_details">Share song details</string>
    <string name="default_playlist_title">New Playlist</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="preference_launch_faq">F.A.Q.</string>
    <string name="preference_launch_faq_text">Information how to get help for this application</string>
    <string name="preference_launch_about">About</string>
    <string name="preference_launch_about_text">Version, license and contributors information</string>
    <string name="preference_theme_title">Theme</string>
    <string name="preference_theme_summary">Select a different design for the application.</string>
    <string name="preference_theme_message">Select a theme</string>
    <string name="preference_theme_item_indigo">Indigo</string>
    <string name="preference_theme_item_orange">Orange</string>
    <string name="preference_theme_item_deep_orange">Deep Orange</string>
    <string name="preference_theme_item_blue">Blue</string>
    <string name="preference_theme_item_dark_grey">Dark Grey</string>
    <string name="preference_theme_item_brown">Brown</string>
    <string name="preference_theme_item_light_green">Light Green</string>
    <string name="preference_theme_item_red">Red</string>
    <string name="preference_theme_item_oled_dark">OLED Dark</string>
    <string-array name="preference_odyssey_styles">
        <item>@string/preference_theme_item_indigo</item>
        <item>@string/preference_theme_item_orange</item>
        <item>@string/preference_theme_item_deep_orange</item>
        <item>@string/preference_theme_item_blue</item>
        <item>@string/preference_theme_item_dark_grey</item>
        <item>@string/preference_theme_item_brown</item>
        <item>@string/preference_theme_item_light_green</item>
        <item>@string/preference_theme_item_red</item>
        <item>@string/preference_theme_item_oled_dark</item>
    </string-array>
    <string name="preference_album_sort_order_title">Artist Albums sort order</string>
    <string name="preference_album_sort_order_message">Sort by</string>
    <string name="preference_album_sort_order_summary">Select the sort order for albums of an artist.</string>
    <string name="preference_album_sort_order_name">Name</string>
    <string name="preference_album_sort_order_year">Year</string>
    <string-array name="preference_album_sort_orders">
        <item>@string/preference_album_sort_order_name</item>
        <item>@string/preference_album_sort_order_year</item>
    </string-array>
</resources>