<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2017 Team Gateship-One
  ~  (Hendrik Borghorst & Frederik Luetkes)
  ~
  ~  The AUTHORS.md file contains a detailed contributors list:
  ~  <https://github.com/gateship-one/malp/blob/master/AUTHORS.md>
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggle_single_mode"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/action_toggle_single_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_consume_mode"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/action_toggle_consume_mode"
        app:showAsAction="never" />
    <group android:id="@+id/group_playlist_actions">
        <item
            android:id="@+id/action_save_playlist"
            android:orderInCategory="1"
            android:title="@string/action_save_playlist"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_shuffle_playlist"
            android:orderInCategory="2"
            android:title="@string/action_shuffle_playlist"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_clear_playlist"
            android:orderInCategory="3"
            android:title="@string/action_clear_playlist"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_add_url"
            android:orderInCategory="4"
            android:title="@string/action_add_url"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_jump_to_current"
            android:orderInCategory="5"
            android:title="@string/action_jump_to_current"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_open_fanart"
        android:icon="@drawable/ic_fullscreen_24dp"
        android:orderInCategory="6"
        android:title="@string/action_open_fanart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_streaming"
        android:orderInCategory="7"
        android:title="@string/action_start_streaming"
        app:showAsAction="never" />
    <item android:title="@string/action_wikipedia"
        android:orderInCategory="100">
        <menu>
            <item
                android:id="@+id/action_wikipedia_album"
                android:title="@string/action_wikipedia_album" />
            <item
                android:id="@+id/action_wikipedia_artist"
                android:title="@string/action_wikipedia_artist" />
        </menu>
    </item>
</menu>