<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (C) 2017 Team Gateship-One
  ~  (Hendrik Borghorst & Frederik Luetkes)
  ~
  ~  The AUTHORS.md file contains a detailed contributors list:
  ~  <https://github.com/gateship-one/malp/blob/master/AUTHORS.md>
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_song_play_next"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_enqueue_as_next"/>

    <item
        android:id="@+id/action_remove_song"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_remove_track"/>
    <item
        android:id="@+id/action_remove_album"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/action_remove_album"/>
    <item
        android:id="@+id/action_show_artist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_artist"/>
    <item
        android:id="@+id/action_show_album"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_album"/>
    <item
        android:id="@+id/action_add_to_saved_playlist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_add_to_saved_playlist"/>
    <item
        android:id="@+id/action_show_details"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_show_details"/>
</menu>